# crumzi

./: AGENTS.md  Cargo.toml
.github/workflows/: release.yml
crumzi-cli/: Cargo.toml  PLAN.md
crumzi-cli/src/: app.rs  main.rs
crumzi-client/: Cargo.toml  PLAN.md
crumzi-client/src/: config.rs  config_tests.rs  error.rs  lib.rs  playback.rs  playback_tests.rs  queue.rs  queue_tests.rs  status.rs  stored_playlists.rs  stored_playlists_tests.rs
crumzi-client/src/proto/: command.rs  mod.rs  response.rs  testdata.rs
crumzi-client/src/types/: mod.rs  playlist.rs  song.rs  status.rs
src/: app.rs  main.rs
