[package]
name = "crumzi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
mpd = { version = "0.1.0", features = ["serde"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
crumzi-client = { path = "../crumzi-client" }
